fix generate text of english service
